# SudoLabs

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
howl/: __init__.py  __main__.py  cli.py  config.py  constants.py
howl/ai/: context.py  helper.py  htb_prompts.py  prompts.py  websearch.py
howl/db/: database.py  queries.py  schema.sql
howl/docker/: health.py  manager.py  network.py
howl/engine/: flags.py  session.py  tracker.py
howl/htb/: hosts.py  loop.py  scanner.py  session.py
howl/scoring/: achievements.py  engine.py
howl/targets/: loader.py  models.py  registry.py
howl/ui/: banner.py  dashboard.py  menu.py  panels.py  progress.py  tables.py  terminal.py  theme.py
sudolabs/: __init__.py  __main__.py  cli.py  config.py  constants.py  notes.py  updater.py
sudolabs/ai/: context.py  helper.py  htb_prompts.py  prompts.py
sudolabs/db/: database.py  queries.py  schema.sql
sudolabs/docker/: health.py  manager.py  network.py
sudolabs/engine/: flags.py  session.py  tracker.py
sudolabs/htb/: hosts.py  loop.py  session.py
sudolabs/scoring/: achievements.py  engine.py
sudolabs/targets/: loader.py  models.py  registry.py
sudolabs/ui/: banner.py  dashboard.py  menu.py  panels.py  progress.py  tables.py  terminal.py  theme.py
targets/api-hacking/api-key-exposure/: Dockerfile
targets/api-hacking/broken-object-auth/: Dockerfile
targets/api-hacking/cors-misconfiguration/: Dockerfile
targets/api-hacking/graphql-introspection/: Dockerfile
targets/api-hacking/idor-user-data/: Dockerfile
targets/api-hacking/mass-assignment/: Dockerfile
targets/api-hacking/oauth-redirect-steal/: Dockerfile
targets/api-hacking/rate-limit-bypass/: Dockerfile
targets/api-hacking/verb-tampering-bypass/: Dockerfile
(+95 files in other folders)
